--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-// 1. 確保優先載入 Socket.io 庫
-// <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
+<script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
 
-// 2. 初始化 Socket 連線 (請確保網址正確)
-const socket = io("https://were-wolf.onrender.com");
+<script>
+    // 2. 接下來才是 JavaScript 的初始化
+    const socket = io("https://were-wolf.onrender.com");
+    // ... 後續代碼保持不變
 
 // 3. 全域狀態變數
 let myName = "";
